<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context=".ResultActivity"
    android:padding="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_header">
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/waec_logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/waec_logo_description"
            android:src="@drawable/waec"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_name_wrapper"
            android:layout_below="@id/waec_logo">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidate_name_text"
                android:paddingTop="5dp"
                android:id="@+id/hint_candidate_name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_candidate_name"
                android:textSize="18sp"
                android:layout_toEndOf="@id/hint_candidate_name"
                android:layout_marginStart="5dp"
                android:text="Enyi Dapriye Abraham"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_number_wrapper"
            android:layout_below="@id/layout_name_wrapper">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/candidate_number_text"
                android:paddingTop="5dp"
                android:id="@+id/hint_exam_number"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_exam_number"
                android:textSize="18sp"
                android:layout_toEndOf="@id/hint_exam_number"
                android:layout_marginStart="5dp"
                android:text="89909399AF"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_center_name_wrap"
            android:layout_below="@id/layout_number_wrapper">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/center_name_text"
                android:paddingTop="5dp"
                android:id="@+id/hint_center_number"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_center_name"
                android:textSize="18sp"
                android:layout_toEndOf="@id/hint_center_number"
                android:layout_marginStart="5dp"
                android:text="Federal Government College, Otobi"
                android:textStyle="bold"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/layout_year_wrap"
            android:layout_below="@id/layout_center_name_wrap">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exam_year_text"
                android:paddingTop="5dp"
                android:id="@+id/hint_exam_year"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_exam_year"
                android:textSize="18sp"
                android:layout_toEndOf="@id/hint_exam_year"
                android:layout_marginStart="5dp"
                android:text="MAY/JUN 2016"
                android:textStyle="bold"/>
        </RelativeLayout>
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recycler_view_result"
        android:scrollbars="vertical">
    </android.support.v7.widget.RecyclerView>

</android.support.constraint.ConstraintLayout>
